--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,22 @@
 asgiref==3.3.1
+certifi==2020.12.5
+chardet==4.0.0
+cloudinary==1.25.0
 dj-database-url==0.5.0
 Django==3.1.7
 django-active-link==0.1.7
+django-cloudinary-storage==0.3.0
 django-crispy-forms==1.11.2
 django-quill-editor==0.1.22
 django-summernote==0.8.11.6
 gunicorn==20.1.0
+idna==2.10
 Pillow==8.1.2
-psycopg2==2.7.2
+psycopg2-binary==2.8.6
 python-decouple==3.4
 pytz==2021.1
+requests==2.25.1
+six==1.15.0
 sqlparse==0.4.1
+urllib3==1.26.4
 whitenoise==5.2.0
