--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Django==3.1.7
 django-active-link==0.1.7
 django-cloudinary-storage==0.3.0
 django-crispy-forms==1.11.2
+django-environ==0.4.5
 django-quill-editor==0.1.22
 django-summernote==0.8.11.6
 gunicorn==20.1.0
